[tool.poetry]
name = "tkinter_designer_interaction_example"
version = "0.1.0"
description = "A simple interaction example using tkinter_designer build output"
authors = ["Jakob Vendegna <me@jakobvendegna.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
tkdesigner="1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
